--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -8,6 +8,11 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  max-width: 50%;
+  display: grid;
+  grid-template-columns: 25% 75%;
+  grid-template-rows: 100px 100px 500px 100px;
+  grid-gap: 15px;
 }
 
 .container div {
@@ -21,10 +26,12 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+  grid-column: span 2;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-row: span 2;
 }
 
 .nav {
@@ -44,4 +51,5 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+  grid-column: span 2;
 }
