--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,9 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
 }
 
 .container div {
@@ -17,15 +20,22 @@
 
 .header {
   background-color: #393f4d;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-column: span 2;
 }
 
 .logo {
 }
 
 .menu {
+  align-self: center;
 }
 
 .menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  list-style: none;
 }
 
 .menu ul,
@@ -35,6 +45,9 @@
 
 .sidebar {
   background-color: #FF7755;
+  gap: 50px;
+  display: grid;
+  grid-row: span 2;
 }
 
 .sidebar .photo {
@@ -43,6 +56,8 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  display: grid;
+  align-content: center;
 }
 
 .photo  {
@@ -53,13 +68,20 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  display: grid;
+  align-content: center;
 }
 
 .nav {
   background-color: #FF7755;
+  grid-column-start: 2;
+  display: grid;
 }
 
 .nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  list-style: none;
 }
 
 .nav ul li {
@@ -69,6 +91,10 @@
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
+  grid-column-start: 2;
 }
 
 .article p {
@@ -82,6 +108,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -97,6 +124,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: span 2;
 }
 
 .footer p {
